maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:45: error: not enough arguments for method min: (a: Int, b: Int)Int.
Unspecified value parameter b.
  return min((min(x,y),min(a,b)))
            ^